feat: 결과 출력 기능 구현